--- a/CSS/resecss.css
+++ b/CSS/resecss.css
@@ -19,8 +19,42 @@ html, body{
 
 
 .header{
-    background-color: black;
-    color: blanchedalmond;
+    display: flex;
+    /* flex-direction: row; */
+    flex-wrap: wrap;
+    box-sizing: border-box;
+    background-color: rgb(36, 36, 36);
+    /* filter: blur(2px);  */
+    color: rgb(255, 253, 249);
+    height: 80px;
+    /* opacity: 0.5; */
+    font-size: 35px;
+    margin-top: 0;
+    position: sticky;
+    top: 0;
+}
+
+.headerText{
+    background-image: -webkit-gradient( linear, left top, right top, color-stop(0, rgb(122, 74, 255)), color-stop(0.15, rgb(255, 95, 255)), color-stop(0.3, rgb(126, 126, 255)), color-stop(0.45, rgb(106, 255, 255)), color-stop(0.6, rgb(218, 123, 255)),color-stop(0.75, rgb(197, 111, 255)), color-stop(0.9, rgb(255, 140, 221)), color-stop(1, rgb(255, 123, 123)) );
+    /* background-image: gradient( linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2),color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22) ); */
+    color:transparent;
+    background-clip: text;
+    display: flex;
+    width: 400px;
+    padding-left: 45px;
+    border: 1px solid red;
+    font-size: 50px;
+    align-items: center;
+}
+
+
+.menuheader{
+    border: 1px solid red;
+    display: flex; 
+    width: 1000px;
+    /* flex-wrap: wrap;  */
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -28,12 +62,42 @@ html, body{
 
 /*----------------------------BODY CONTENT--------------------------------*/
 
+.imageContainer{
+    display: flex;
+    width: 100%;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.textImage{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid red;
+    position: absolute;
+    top: 200px;
+    left: 50%;
+    /* width: 300px; */
+}
+
+.topImage{
+    width: 100%;
+}
+
+.topImage img{
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+}
 
 
 .middle{
     overflow: auto;
     padding-bottom: 100px;
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .flexbox-middle{
@@ -60,7 +124,7 @@ html, body{
     background: #303036;
     width: 100%;
     border: 1px solid red;
-    height: 350px;
+    height: 300px;
     display: flex;
 }
 
@@ -73,17 +137,14 @@ html, body{
 }
 
 .footer-bottom{
-    /* border: 1px solid red; */
     background: #343a40;
     color: #686868;
     height: 50px;    
     width: 100%;
     text-align: center;
-    /* position: absolute; */
     bottom: 0px;
     left: 0px;
-    /* padding-top: 20px; */
-    /* padding-bottom: 35px; */
+    padding-top: 20px;
 }
 
 .footer a{color: #d3d3d3;}
