--- a/CSS/resecss.css
+++ b/CSS/resecss.css
@@ -20,7 +20,6 @@ html, body{
 
 .header{
     display: flex;
-    /* flex-direction: row; */
     flex-wrap: wrap;
     box-sizing: border-box;
     background-color: rgb(36, 36, 36);
@@ -31,6 +30,7 @@ html, body{
     font-size: 35px;
     margin-top: 0;
     position: sticky;
+    z-index: 1;
     top: 0;
 }
 
@@ -42,20 +42,30 @@ html, body{
     display: flex;
     width: 400px;
     padding-left: 45px;
-    border: 1px solid red;
     font-size: 50px;
     align-items: center;
 }
 
 
 .menuheader{
-    border: 1px solid red;
     display: flex; 
-    width: 1000px;
-    /* flex-wrap: wrap;  */
-    justify-content: center;
-    align-items: center;
 }
+
+
+.menu{
+    border: 1px linear-gradient( linear, left top, right top, color-stop(0, rgb(122, 74, 255)), color-stop(0.15, rgb(255, 95, 255)), color-stop(0.3, rgb(126, 126, 255)), color-stop(0.45, rgb(106, 255, 255)), color-stop(0.6, rgb(218, 123, 255)),color-stop(0.75, rgb(197, 111, 255)), color-stop(0.9, rgb(255, 140, 221)), color-stop(1, rgb(255, 123, 123)) );
+    font-size: 35px;
+    color: rgb(146, 137, 137);
+    padding-top: 13px;
+    text-align: center;
+    font-weight: 300;
+    box-sizing: border-box;
+    width: 300px;
+    height: 100%;
+}
+
+.menu:hover{background: rgb(20, 20, 20);}
+
 
 
 
@@ -65,20 +75,18 @@ html, body{
 .imageContainer{
     display: flex;
     width: 100%;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
+    text-align: right;
 }
+
 
 .textImage{
     display: flex;
-    align-items: center;
-    justify-content: center;
     border: 1px solid red;
     position: absolute;
+    z-index: 0;
     top: 200px;
     left: 50%;
-    /* width: 300px; */
+    width: 300px;
 }
 
 .topImage{
@@ -98,11 +106,20 @@ html, body{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
 }
 
 .flexbox-middle{
+    width: 300px;
+    border: 1px solid red;
     flex-direction: row;
     flex-wrap: wrap;
+}
+
+.box{
+    box-sizing: border-box;
+    flex-basis: 50%;    
 }
 
 
