--- a/CSS/resecss.css
+++ b/CSS/resecss.css
@@ -25,8 +25,10 @@ a{
 
 .header{
     display: flex;
-    flex-wrap: wrap;
-    box-sizing: border-box;
+    flex-basis: 2;
+    /* flex-wrap: wrap; */
+    /* flex-direction: row; */
+    /* box-sizing: border-box; */
     background-color: rgb(36, 36, 36);
     color: rgb(255, 253, 249);
     height: 80px;
@@ -35,6 +37,8 @@ a{
     position: sticky;
     z-index: 1;
     top: 0;
+    align-items: center;
+    
 }
 
 .headerText{
@@ -42,28 +46,71 @@ a{
     color:transparent;
     background-clip: text;
     display: flex;
-    width: 450px;
+    width: 100%;
+    max-width: 450px;
     padding-left: 45px;
     padding-right: 70px;
-    align-items: center;
 }
+
 
 
 .menuheader{
+    align-items: center;
+    justify-content: end;
     display: flex; 
+    /* border: 1px solid red; */
+    width: 100%;
+    height: 100%;
+    max-height: 350px;
 }
 
 
-.menu{
-    border: 1px linear-gradient( linear, left top, right top, color-stop(0, rgb(122, 74, 255)), color-stop(0.15, rgb(255, 95, 255)), color-stop(0.3, rgb(126, 126, 255)), color-stop(0.45, rgb(106, 255, 255)), color-stop(0.6, rgb(218, 123, 255)),color-stop(0.75, rgb(197, 111, 255)), color-stop(0.9, rgb(255, 140, 221)), color-stop(1, rgb(255, 123, 123)) );
+.dropdown{
+    border: 9px solid red;
+    position: relative;
+    display: inline-block;
+    background-image: -webkit-gradient( linear, left top, right top, color-stop(0, rgb(122, 74, 255)), color-stop(0.15, rgb(255, 95, 255)), color-stop(0.3, rgb(126, 126, 255)), color-stop(0.45, rgb(106, 255, 255)), color-stop(0.6, rgb(218, 123, 255)),color-stop(0.75, rgb(197, 111, 255)), color-stop(0.9, rgb(255, 140, 221)), color-stop(1, rgb(255, 123, 123)) );
+    color: transparent;
+    background-clip: text;
+    border: none;
+    padding: 15px 32px;
+    /* padding-right: 100px; */
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+.dropdown-content{
+    display: none;
+    position: absolute;
+    padding-top: 100px;
+    background-color: rgb(19, 19, 19);
+    color: aliceblue;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+}
+
+.dropdown:hover .dropdown-content{
+    display: block;
+}
+
+
+
+
+     /* .menu{
+    border: 1px solid red;
+    font-size: 2vw;
     color: rgb(206, 206, 206);
-    padding-top: 17px;
+    position: relative;
     text-align: center;
     font-weight: 300;
     box-sizing: border-box;
-    width: 300px;
+    width: 100%;
+    max-width: 300px;
     height: 100%;
-}
+    }  */
 
 .menu:hover{background: rgb(20, 20, 20);}
 
