--- a/CSS/resecss.css
+++ b/CSS/resecss.css
@@ -58,12 +58,14 @@ a{
     align-items: center;
     justify-content: end;
     display: flex; 
+    z-index: 2;
     flex-direction: row;
     /* border: 1px solid red; */
     width: 100%;
     height: 100%;
     max-height: 350px;
 }
+
 
 
 .dropdown{
@@ -77,24 +79,34 @@ a{
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
+    z-index: 1;
     }
 
+
 .dropdown-content{
+    z-index: 1;
     font-size: 40px;
     display: inline-block;
     position: absolute;
-    padding-top: 100px;
     background-color: rgb(36, 36, 36);
-    color: aliceblue;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    width: 300px;
     padding: 12px 16px;
     z-index: 1;
     display: block;
     right: 0;
     left: auto;
+    margin-top: 16px;
     padding-top: 13px;
-    border-bottom: black;
+    border-bottom: 4px  solid rgb(186, 103, 255);
+}
+
+.dropdown-content a{
+    color: aliceblue;
+}
+
+.dropdown-content .menu:hover{
+    background: rgb(59, 59, 59);
 }
 
 
@@ -110,6 +122,9 @@ a{
     text-align: center;
     justify-content: center;
     align-items: center;
+    align-self: center;
+    align-content: center;
+    /* left: 35%; */
 }
 
 
@@ -117,22 +132,24 @@ a{
     justify-content: center;
     align-items: center;
     position: absolute;
+    text-align: center;
+    left: center;
 }
 
 .textImage{
-    width: 600px;
-    height: 100px;
+    width: 35vw;
+    min-width: 500px;
+    height: 5vw;
+    min-height: 70px;
     display: flex;
     color: aliceblue;
-    font-size: 40px;
+    font-size: calc(12px + 2vw);
     background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
-    position: absolute;
+    background-color: rgba(0,0,0, 0.4); 
     z-index: 0;
-    left: 50%;
-    top: 50%;
-    margin-top: -300px;
-    margin-left: -270px;
+    margin-top: -200px;
+    /* margin-left: 400px; */
+    /* margin-right: 400px; */
 }
 
 
@@ -151,25 +168,49 @@ a{
 .middle{
     /* overflow: auto; */
     padding-bottom: 100px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    /* flex-direction: row;
+    flex-wrap: wrap; */
     justify-content: center;
     text-align: center;
 }
 
-.flexbox-middle{
-    width: 300px;
-    border: 1px solid red;
-    flex-direction: row;
-    flex-wrap: wrap;
+.grid-middle{
+    background-color: rgb(218, 218, 218);
+    width: 60%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    
 }
+
+/* .box img{
+    height: 50%;
+    width: 50%;
+} */
 
 .box{
+    border: 1px solid red;
+    background-color: rgb(218, 218, 218); 
+    text-align: center;
     box-sizing: border-box;
-    flex-basis: 50%;    
+    flex-basis: 100%; 
 }
 
+
+/* .boxes{
+    display: flex;
+    flex-direction: column;
+    padding: 100px;
+    flex-basis: 100%;
+} */
+
+.box2{
+    flex: 1;
+}
+
+.box3{
+    flex: 1;
+  
+}
 
 
 /*--------------------------FOOTER CONTENT----------------------------------*/
