--- a/CSS/resecss.css
+++ b/CSS/resecss.css
@@ -26,13 +26,9 @@ a{
 .header{
     display: flex;
     flex-basis: 2;
-    /* flex-wrap: wrap; */
-    /* flex-direction: row; */
-    /* box-sizing: border-box; */
     background-color: rgb(36, 36, 36);
     color: rgb(255, 253, 249);
     height: 80px;
-    /* font-size: 2vw; */
     font-size: calc(10px + 2vw);
     margin-top: 0;
     position: sticky;
@@ -92,7 +88,6 @@ a{
     width: 300px;
     right: 0;
     left: auto;
-    /* margin-top: 16px; */
     padding-top: 13px;
     border-bottom: 4px  solid rgb(186, 103, 255);
 }
@@ -108,11 +103,7 @@ a{
 
 .dropdown-content .menu:hover{
     background: rgb(59, 59, 59);
-    transition: all 1s ease;
-}
-
-.dropdown:hover .dropdown-content{
-    transition: all 1s ease;
+    transition: all 0.75s ease;
 }
 
 
@@ -131,12 +122,6 @@ a{
 .imageContainer{
     display: flex;
     width: 100%;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    align-self: center;
-    align-content: center;
-    /* left: 35%; */
 }
 
 
@@ -145,7 +130,6 @@ a{
     align-items: center;
     position: absolute;
     text-align: center;
-    left: center;
 }
 
 
@@ -176,30 +160,29 @@ a{
     width: 100%;
     height: 300px;
     object-fit: cover;
+    box-shadow: 3px 3px 5px rgb(172, 172, 172);
 }
 
 
 .middle{
-    /* overflow: auto; */
+    padding-top: 40px;
     padding-bottom: 100px;
-    /* flex-direction: row;
-    flex-wrap: wrap; */
-    justify-content: center;
+    display: grid;
+    align-items: center; 
+    justify-items: center;
     text-align: center;
 }
 
 .grid-middle{
     background-color: rgb(218, 218, 218);
-    width: 60%;
+    width: 80%;
     display: grid;
+    justify-self: center;
     grid-template-columns: 1fr 1fr 1fr;
+    justify-self: center;
     
 }
 
-/* .box img{
-    height: 50%;
-    width: 50%;
-} */
 
 .box{
     border: 1px solid red;
@@ -210,22 +193,50 @@ a{
 }
 
 
-/* .boxes{
-    display: flex;
-    flex-direction: column;
-    padding: 100px;
-    flex-basis: 100%;
-} */
+.box1{
+    grid-column: 1/4;
+    background-color: rgb(36, 36, 36);
+    height: 3vw;
+    color: aliceblue;
+    align-content: center;
+    font-size: 2vw;
+    text-align: center;
+}
 
 .box2{
-    flex: 1;
+    grid-column: 1/2;
 }
 
 .box3{
-    flex: 1;
-  
+    grid-column: 2/4;
 }
 
+
+.box4{
+    grid-column: 1/4;
+    background-color: rgb(36, 36, 36);
+}
+
+.box5{
+    grid-column: 1/2;
+}
+
+.box6{
+    grid-column: 2/4;
+}
+
+.box7{
+    grid-column: 1/4;
+    background-color: rgb(36, 36, 36);
+}
+
+.box8{
+    grid-column: 1/2;
+}
+
+.box9{
+    grid-column: 2/4;
+}
 
 /*--------------------------FOOTER CONTENT----------------------------------*/
 
