Added content to the body using grid, its fucking amazing I love grid, death to flexbox and bootsrap

--- a/CSS/resecss.css
+++ b/CSS/resecss.css
@@ -174,18 +174,19 @@ a{
 }
 
 .grid-middle{
-    background-color: rgb(218, 218, 218);
-    width: 80%;
+    background-color: rgb(255, 255, 255);
+    width: 90%;
     display: grid;
     justify-self: center;
     grid-template-columns: 1fr 1fr 1fr;
     justify-self: center;
+    grid-gap: 0.5em;
     
 }
 
 
 .box{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     background-color: rgb(218, 218, 218); 
     text-align: center;
     box-sizing: border-box;
@@ -194,49 +195,52 @@ a{
 
 
 .box1{
+    text-align: right;
     grid-column: 1/4;
-    background-color: rgb(36, 36, 36);
+    background-color: rgb(54, 54, 54);
     height: 3vw;
     color: aliceblue;
     align-content: center;
     font-size: 2vw;
     text-align: center;
+    padding-top: 5px;
 }
 
-.box2{
+.box2, .box6{
     grid-column: 1/2;
+    max-height: 350px;
 }
 
-.box3{
+.box3, .box7{
     grid-column: 2/4;
+    max-height: 350px;
+}
+
+.box4, .box8{
+    grid-column: 1/3;
+    max-height: 350px;
+}
+
+.box5, .box9{
+    grid-column: 3/4;
+    max-height: 350px;
+}
+
+.box img{
+    width:100%;
+    height:100%;
+    object-fit: cover;
 }
 
 
-.box4{
-    grid-column: 1/4;
-    background-color: rgb(36, 36, 36);
-}
+/* .box5 img{
+    max-width:100%;
+    max-height:100%;
+} */
 
-.box5{
-    grid-column: 1/2;
-}
 
-.box6{
-    grid-column: 2/4;
-}
 
-.box7{
-    grid-column: 1/4;
-    background-color: rgb(36, 36, 36);
-}
 
-.box8{
-    grid-column: 1/2;
-}
-
-.box9{
-    grid-column: 2/4;
-}
 
 /*--------------------------FOOTER CONTENT----------------------------------*/
 
