--- a/CSS/resecss.css
+++ b/CSS/resecss.css
@@ -173,7 +173,7 @@ a{
     text-align: center;
 }
 
-.grid-middle{
+.grid-middle, .flight{
     background-color: rgb(255, 255, 255);
     width: 90%;
     display: grid;
@@ -243,9 +243,18 @@ a{
     color: black;
 }
 
+.fbox3{
+    grid-column: 2/4;
+}
 
 .flight{
     padding-top: 100px;
+}
+
+.flight img{
+    height: 100%;
+    width: 100%;
+    object-fit: fill;
 }
 
 
@@ -264,22 +273,23 @@ a{
 
 .footer .footer-content{
     background: #303036;
-    width: 100%;;
-    height: 15vw;
+    width: 100%;
+    height: 16vw;
+    min-height: 250px;
     display: flex;
 }
 
 .footer .footer-content .footer-section{
     flex: 1;
     width: 100%;
-    padding: 25 px;
+    /* padding: 25px; */
     font-weight: 600;
 }
 
 .footer-bottom{
     background: #343a40;
     color: #686868;
-    height: 50px;    
+    height: 2.5vw;    
     width: 100%;
     text-align: center;
     bottom: 0px;
@@ -291,12 +301,32 @@ a{
     font-size: 2vw;
 }
 
-.find-us, .contact{
+.find-us{
     text-align: left;
     padding-top: 20px;
-    padding-left: 100px;
-    font-size: 0.5vw;
+    padding-left: 50px;
+    font-size: calc(0.5vw + 1px);
 }
+
+.contact{
+    text-align: left;
+    padding-top: 20px;
+    padding-left: 50px;
+    font-size: 0.5vw;
+
+}
+
+.contact input{
+    width: 22vw;
+    height: 1vw;
+}
+
+.contact textarea{
+    width: 22.9vw;
+    min-height: 6vw;
+    resize: vertical;
+}
+
 
 
 
