--- a/CSS/resecss.css
+++ b/CSS/resecss.css
@@ -57,7 +57,6 @@ a{
     display: flex; 
     z-index: 2;
     flex-direction: row;
-    /* border: 1px solid red; */
     width: 100%;
     height: 100%;
     max-height: 350px;
@@ -80,7 +79,7 @@ a{
 
 
 .dropdown-content{
-    font-size: 35px;
+    font-size: 2vw;
     display: none;
     position: absolute;
     background-color: rgb(36, 36, 36);
@@ -115,8 +114,16 @@ a{
 
 
 
+
+
 /*----------------------------BODY CONTENT--------------------------------*/
 
+
+
+
+
+
+/*------------------------Top image and text-over-image-------------------*/
 
 
 .imageContainer{
@@ -164,6 +171,11 @@ a{
 }
 
 
+
+/*---------------------"What to do" Grig layout------------------------*/
+
+
+
 .middle{
     padding-top: 40px;
     padding-bottom: 100px;
@@ -173,7 +185,7 @@ a{
     text-align: center;
 }
 
-.grid-middle, .flight{
+.grid-middle, .pictures{
     background-color: rgb(255, 255, 255);
     width: 90%;
     display: grid;
@@ -184,7 +196,7 @@ a{
 
 
 
-.box, .flight .box{
+.box{
     background-color: rgb(218, 218, 218); 
     text-align: center;
     box-sizing: border-box;
@@ -192,7 +204,7 @@ a{
 }
 
 
-.box1, .flight .fbox1{
+.box1{
     text-align: right;
     grid-column: 1/4;
     background-color: rgb(54, 54, 54);
@@ -243,15 +255,40 @@ a{
     color: black;
 }
 
-.fbox3{
-    grid-column: 2/4;
-}
 
-.flight{
+/*-------------------Flights gridlayout---------------------------*/
+
+.pictures{
     padding-top: 100px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
-.flight img{
+
+
+.fbox1{
+    grid-column: 1/5;
+    background-color: rgb(54, 54, 54);
+    color: antiquewhite;
+    font-size: 2vw;
+    height: 3vw;
+    padding-top: 5px;
+}
+
+.fbox2, .fbox11{
+    grid-column: 1/3;
+}
+
+
+.fbox3, .fbox12{
+    grid-column: 3/5;
+}
+
+.fbox8{
+    grid-column: 1/3;
+}
+
+
+.pictures img{
     height: 100%;
     width: 100%;
     object-fit: fill;
@@ -282,7 +319,6 @@ a{
 .footer .footer-content .footer-section{
     flex: 1;
     width: 100%;
-    /* padding: 25px; */
     font-weight: 600;
 }
 
@@ -295,6 +331,7 @@ a{
     bottom: 0px;
     left: 0px;
     padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .logo-text, .contact-text{
@@ -313,7 +350,6 @@ a{
     padding-top: 20px;
     padding-left: 50px;
     font-size: 0.5vw;
-
 }
 
 .contact input{
